--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
-
+  page_view_dot_indicator: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,7 +64,13 @@ flutter:
     - assets/onboarding.jpg
     - assets/mountain.jpg
     - assets/fuji.jpg
+    - assets/avatar.png
     - assets/arrow_next.svg
+    - assets/location.svg
+    - assets/user.svg
+    - assets/ru_f.svg
+    - assets/kz_f.svg
+    - assets/kg_f.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
